# TpFinalNeedForSpeed

./: .gitignore  .gitignore.save  README.md  client.sh  installer.sh  server.sh
parsers/: checkpoint_ruta_2.yaml  checkpoints1_tiled.tmj  checkpoints2_tiled.tmj  map_buildings.yaml  map_full.yaml  mapa_tiled.tmj  mapasYMas.tmj  parser_map.py  parser_map_check.py  spawn.py  spawn2.tmj  spawn2.yaml  static_npcs.tmj
source/: CMakeLists.txt  client_main.cpp  installer.sh  server_main.cpp
source/client_src/: audio_manager.cpp  audio_manager.h  client.cpp  client.h  client_camera.cpp  client_camera.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  client_types.h  client_window.cpp  client_window.h  event_manager.cpp  event_manager.h  sdl_constants.h
source/client_src/lobby/: lobby_resources.qrc  lobbywindow.cpp  lobbywindow.h  lobbywindow.ui  lobbywindow.ui.autosave
source/client_src/postgame/: postgame_resources.qrc  postgamewindow.cpp  postgamewindow.h  postgamewindow.ui
source/client_src/renderables/: button.cpp  button.h  car.cpp  car.h  checkpoint.cpp  checkpoint.h  entity.cpp  entity.h  hint.cpp  hint.h  hud.cpp  hud.h  map.cpp  map.h  minimap.cpp  minimap.h  sdl_drawer.cpp  sdl_drawer.h  server_dis_screen.cpp  server_dis_screen.h  start_screen.cpp  start_screen.h  upgrade_screen.cpp  upgrade_screen.h
source/client_src/textures/: car_texture.cpp  car_texture.h  city_texture.cpp  city_texture.h  effects_texture.cpp  effects_texture.h  hud_texture.cpp  hud_texture.h  people_texture.cpp  people_texture.h  texture_manager.cpp  texture_manager.h
source/common_src/: auto.cpp  auto.h  car.cpp  car.h  car_sprites.h  client_disconnect.h  client_msg.h  constant_rate_loop.h  constants.h  entity.cpp  entity.h  init_player.h  joingame.h  metadatagames.h  move_Info.h  move_info.cpp  new_player.h  opcodes.h  player.h  player_state.h  printer.cpp  printer.h  requestgame.h  send_player.h  server_msg.h  srv_car_hit_msg.h  srv_checkpoint_def_msg.h  srv_checkpoint_hit_msg.h
source/common_src/cli_msg/: cli_cheat_request.h  cli_request_upgrade.h  cli_start_game.h  client_msg.h  disconnect_request.h  init_player.h  move_Info.h  requeststats.h  srv_request_upgrade.h
source/common_src/srv_msg/: client_disconnect.h  joingame.h  metadatagames.h  player.h  player_state.h  playerstats.h  server_msg.h  srv_car_hit_msg.h  srv_car_select.h  srv_checkpoint_def_msg.h  srv_checkpoint_hit_msg.h  srv_current_info.h  srv_disconnection.h  srv_npc_spawn.h  srv_race_finished.h  srv_recommended_path.h  srv_send_upgrade.h  srv_starting_game.h  srv_time_left.h  srv_upgrade_logic.h
source/server_src/: building.h  car.cpp  car.h  checkpoint.cpp  checkpoint.h  entity.h  map.yaml  map_parser.cpp  map_parser.h  server.cpp  server.h  server_acceptor.cpp  server_acceptor.h  server_client_handler.cpp  server_client_handler.h  server_client_registry.cpp  server_client_registry.h  server_game_context.cpp  server_game_context.h  server_game_manager.cpp  server_game_manager.h  server_gameloop.cpp  server_gameloop.h  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_types.h  world_contact_handler.cpp  world_contact_handler.h  world_manager.cpp  world_manager.h
source/server_src/game_logic/: lobby_controller.cpp  lobby_controller.h  player_manager.cpp  player_manager.h  race_controller.cpp  race_controller.h  server_gameloop.cpp  server_gameloop.h  world_event_handlers.cpp  world_event_handlers.h
source/server_src/game_logic/config/: config.yaml  config_parser.cpp  config_parser.h
source/server_src/world/: building.cpp  building.h  car.cpp  car.h  checkpoint.cpp  entity.h  map.yaml  map_parser.cpp  map_parser.h  world_contact_handler.cpp  world_contact_handler.h  world_manager.cpp  world_manager.h
source/server_src/world/entities/: building.cpp  building.h  car.cpp  car.h  checkpoint.cpp  checkpoint.h  entity.h
source/tests/: main.cpp  tests.cpp
